--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -8,6 +8,8 @@
   }
   .nav-links {
     display: flex;
+    justify-content: center;
+    align-items: center;
     list-style: none;
     padding-left: 0;
   }
@@ -16,4 +18,5 @@
   }
   .nav-link-text {
     color: black;
+    text-decoration: none;
   }
